tests/NormalTests/paczka1/small_fuzzy/56654029.err
Error in line 5: SSJw56Xb9 A300 29,6
Error in line 1: swtiuh93fz A300 36,4
